# stage_movement_image_analysis

./: .clang-format  .gitignore  CMakeLists.txt  compile_com_nix.json  compile_com_win.json
.cache/clangd/index/: Analysis.cpp.715DD723D184C759.idx  Analysis.h.25B086F4C4C5BA70.idx  Interact.cpp.1EEAF64EB9917BBE.idx  Interact.h.AC2A184E3FDFF524.idx  main.cpp.C3F91DBF74A62100.idx
build_win/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_analysis
include/: Analysis.h  Analysis.hpp  ImageIO.hpp  Interact.h
julia/: hello.csv
src/: Analysis.cpp  ImageIO.cpp  Interact.cpp  main.cpp
